UI additions to the rock paper scissors

--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
 
 
     <body>
+        <div class="buttons">
+            <button id="rock">Rock!</button>
+            <button id="paper">Paper!</button>
+            <button id="scissors">Scissors!</button>
+        </div>
+        <div class="displayResults">
+            <p id="results">
+                
+            </p>
+            <p id="scores">
+
+            </p>
+        </div>
         <script src="jscript.js"></script>
         
     </body>
